--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
          <h3 class="subtitle">Bem vindo!</h3>
          <h1 class="title">PetShop Salsichinha</h1>
         </div>
-        <img class="imagem-header" src="../petshopSalsichinha-html-css/image/salsichinha.png" alt="imagem de um cachorro do tipo salsicha">
+        <img class="imagem-header" src="./image/salsichinha.png" alt="imagem de um cachorro do tipo salsicha">
     </header>
 
     <main id="main">
         <section id="sobre">
             <h1>Um serviço pro seu au-migo favorito</h1>
             <p>Aqui seu Salsicha será bem cuidado</p>
-            <img class="imagem-section" src="../petshopSalsichinha-html-css/image/hotdog2.jpeg" alt="foto de cachorro do tipo salsicha">
+            <img class="imagem-section" src="./image/hotdog2.jpeg" alt="foto de cachorro do tipo salsicha">
             <p>Características do porque amar um Salsichinha</p>
                 <ul>
                     <li>Fofos</li>
